--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           script: |
             console.log(JSON.stringify(context))
-            const branch = ref.replace('refs/heads/', '');
+            const branch = context.ref.replace('refs/heads/', '');
             
             const milestones = await github.rest.issues.listMilestones({
               owner: context.repo.owner,
