--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -70,7 +70,7 @@ jobs:
               github.rest.issues.createMilestone({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                title: process.env.DEFAULT_LABEL,
+                title: process.env.CURRENT_VERSION,
                 description: 'branch: ' + branch
               });
             }
