--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -50,6 +50,7 @@ jobs:
 
     steps:
       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        if: needs.detect-version.outputs.version != ''
         env:
           CURRENT_VERSION: ${{ needs.detect-version.outputs.version }}
         with:
