--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -98,8 +98,8 @@ jobs:
                 github.rest.issues.updateMilestone({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  milestone_number: milestone.number
-                  title: version,
+                  milestone_number: milestone.number,
+                  title: version
                 });            
               }
             }
