--- a/.github/workflows/pr-automation.yml
+++ b/.github/workflows/pr-automation.yml
@@ -65,8 +65,11 @@ jobs:
               issue_number: context.issue.number
             });
             
-            console.log(issue);
-                        
+            if (issue.data.labels.length > 0) {          
+              console.log('PR already has labels, skipping');
+              return;
+            }
+            
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -101,9 +104,11 @@ jobs:
               issue_number: context.issue.number
             });
             
-            console.log(issue);
+            if (issue.data.assignees.length > 0) {
+              console.log('PR already has assignees, skipping');
+              return;
+            }
 
-            console.log(context.payload.pull_request);
             console.log(context.payload.pull_request.merged_by);
 
             const result = await github.rest.issues.update({
