--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -3,6 +3,9 @@ name: Milestones
 on:
   workflow_dispatch:
 
+# clare all permissions for GITHUB_TOKEN
+permissions: {}
+
 jobs:
   dump-github-context:
     name: Dump GitHub Context
@@ -55,6 +58,9 @@ jobs:
     needs: detect-version
     if: needs.detect-version.outputs.version != ''
     runs-on: ubuntu-latest
+    permissions:
+      # write permission is required to manage milestones
+      contents: write
 
     steps:
       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
