--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -10,4 +10,6 @@ on:
 jobs:
   update_release_draft:
     name: Update Release Draft
-    uses: s4u/.github/.github/workflows/release-drafter.yml@master
+    uses: slawekjaranowski/release-drafter@commits-since
+    with:
+      initial-commits-since: '2026-01-15T00:00:00Z'
